--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ idna==3.4
     # via requests
 pytelegrambotapi==4.7.1
     # via -r requirements.in
+python-dotenv==0.21.1
+    # via -r requirements.in
 requests==2.28.2
     # via pytelegrambotapi
 sqlalchemy==2.0.3
