--- a/App/Dockerfile
+++ b/App/Dockerfile
@@ -1,10 +1,8 @@
 FROM python:latest
 
-WORKDIR /usr/app
+WORKDIR /usr/bot
 
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
-
-CMD [ "python" "./main.py"]
